<resources>
    <string name="app_name">CommunityIn</string>
    <string name="searchString">Busca servicios de</string>
    <string name="zoneString">¿En qué zona?</string>
    <string name="searchButton">Buscar</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="community">CommunityIn</string>
    <string name="forgotPass">¿Olvidaste tu contraseña?</string>
    <string name="register">Regístrate</string>
    <string name="nocuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="username">Nombre de usuario</string>
    <string name="usernameHint">Juanito Perez</string>
    <string name="emailHint">correo@electronico.com</string>
    <string name="passwordHint">Introduce acá tu contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="phoneHint">+569 12345678</string>
    <string name="registerButton">Registrarse</string>
    <string name="profileMenu">Mi Perfil</string>
    <string name="findJob">Buscar Trabajo</string>
    <string name="history">Historial</string>
    <string name="profileName">Perfil Usuario</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="descripcion">Descripcion</string>
    <string name="verPerfil">Ver perfil</string>
    <string name="DatosPersonales">Datos personales</string>
    <string name="Horario">Horarios (Lunes a Viernes)</string>
    <string name="HorarioHardcoded">10:00 AM a 18:00 PM</string>
    <string name="Calificacion">Calificación</string>
    <string name="Comentarios">Comentarios</string>
    <string name="Calificar">Calificar</string>
    <string name="ratings">Ver comentarios</string>
</resources>