<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPerfilActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:background="@drawable/profile_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="67dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:id="@+id/searchPerfil_foto"
                    android:layout_height="150dp"
                    android:src="@drawable/menu"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.11"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="30sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/DatosPersonales" />

        <LinearLayout
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre: "
                android:id="@+id/searchPerfil_nombre"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Correo: "
                android:id="@+id/searchPerfil_correo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Teléfono: "
                android:id="@+id/searchPerfil_numero"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trabajo: "
                android:id="@+id/searchPerfil_trabajo"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center"
            android:text= "@string/Horario">
        </TextView>
        <LinearLayout
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HorarioHardcoded"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calificacion"
            android:textSize="30sp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textAlignment="center">

        </TextView>

        <RatingBar
            android:id="@+id/searchPerfil_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rating="4"
            android:numStars="5"
            android:isIndicator="true"/>

    </LinearLayout>

</LinearLayout>